Adding --add-opens required by JRuby for it not to complain