@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>io.github.oliviercailloux</groupId>
@@ -8,6 +10,12 @@
 	</parent>
 	<artifactId>publish</artifactId>
 	<version>0.0.2-SNAPSHOT</version>
+
+	<properties>
+		<argLine>--add-opens java.base/sun.nio.ch=ALL-UNNAMED
+			--add-opens
+			java.base/java.io=ALL-UNNAMED</argLine>
+	</properties>
 
 	<dependencies>
 		<dependency>
